Refactor NMS handling and audience management
Replaced individual player management with `AbstractAudience` for improved readability and maintainability. Simplified NMS handling by removing and modifying dependencies in `pom.xml` and updating method calls in multiple classes.